Fixed wrong translations on table component and z-index on dropdown/multiselect list

--- a/projects/biit-ui/inputs/src/biit-dropdown/biit-dropdown.component.scss
+++ b/projects/biit-ui/inputs/src/biit-dropdown/biit-dropdown.component.scss
@@ -129,7 +129,7 @@ input::selection{ background-color:transparent }
 .dropdown-list {
   background: white;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   box-sizing: border-box;
   border: 0.175rem solid black;
   margin-top: -0.175rem;
